# paperwise

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-pages.yml  publish-image.yml
docs-site/: README.md  astro.config.mjs  package.json
docs-src/: README.md  astro.config.mjs  package-lock.json
docs-src/src/components/: DocsHeader.astro
infra/: docker-compose.yml
samples/: DEMOS.md  README.md
scripts/: migrate_storage_layout.py  reindex_document_chunks.py  smoke_llm.py
src/paperwise/: __init__.py
src/paperwise/adapters/: __init__.py
src/paperwise/api/: __init__.py  dependencies.py  main.py
src/paperwise/application/: interfaces.py  use_cases.py
src/paperwise/domain/: __init__.py  models.py
src/paperwise/events/: __init__.py
src/paperwise/infrastructure/: config.py  factories.py  logging.py
src/paperwise/server/: __init__.py  collection_access.py  collection_requests.py  collection_responses.py  dependencies.py  document_access.py  document_requests.py  document_responses.py  html_rewriter.py  http_llm_provider.py  llm_provider.py  main.py  ui_fragments.py  ui_initial_data.py  ui_page.py  ui_payloads.py  user_preferences.py  user_schemas.py
src/paperwise/workers/: celery_app.py  tasks.py
src/zapis/: __init__.py
src/zapis/api/: dependencies.py  main.py
src/zapis/application/: __init__.py  interfaces.py  use_cases.py
src/zapis/domain/: models.py
src/zapis/events/: types.py
src/zapis/infrastructure/: __init__.py  config.py  db.py
src/zapis/workers/: __init__.py  celery_app.py  tasks.py
tests/integration/document_pipeline/: test_process_document.py
tests/unit/: test_chat_tool_payloads_service.py  test_collections_api.py  test_config.py  test_dispatcher.py  test_document_listing_service.py  test_document_repository.py  test_document_service.py  test_documents_api.py  test_file_relocation.py  test_gemini_llm_provider.py  test_health.py  test_llm_debug_log.py  test_llm_parsing_service.py  test_llm_provider_factory.py  test_openai_llm_provider.py  test_paperless_compat_api.py  test_parsing_service.py  test_search_text_service.py  test_source_dates.py  test_static_assets_packaging.py  test_taxonomy_service.py  test_taxonomy_stats_service.py  test_ui_routes.py  test_upload_validation.py  test_users_api.py  test_worker_tasks.py
tools/: check_version_consistency.py  migrate_blob_refs_relative.py  migrate_storage_layout.py  repair_ocr_local.py
website/: README.md  getting-started.html  index.html  robots.txt  sitemap.xml  styles.css  support.html
website/docs/: 404.html  README.md  index.html  sitemap-0.xml  sitemap-index.xml
website/docs-src/: README.md  astro.config.mjs
website/docs/_astro/: Search.astro_astro_type_script_index_0_lang.kqNDVTuv.js  common.B5DCCvSE.css  common.DL7AoPrH.css  ui-core.C8kvfg30.js
website/docs/getting-started/: index.html
website/docs/model-config/: index.html
website/docs/pagefind/: pagefind-entry.json  pagefind.en_30f86c9b91.pf_meta  (+10 more)
(+251 files in other folders)
