[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zapis"
version = "0.1.0"
description = "AI-native document management platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.12",
  "redis>=5.1.0",
  "uvicorn[standard]>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
